compiler/w_session/tests/errors/if-branch-mismatch.w
fn main(a: u32, b: f32, c: f64): u32 {
    if a {
        b
    } else {
        c
    }
}